feat: add component generator
